# grocery-spoilage-detection

./: README.md  docker-compose.yaml
frontend/: .env  Dockerfile
frontend/src/: App.js
frontend/src/components/: FreshnessDetector.css  FreshnessDetector.jsx
mlapi/: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml
mlapi/frontend/src/: App.js
mlapi/src/: banana_predict.py  housing_predict.py  main.py
